--- a/Sprint5/Task2.ipynb
+++ b/Sprint5/Task2.ipynb
@@ -188,9 +188,134 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Model S, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "Model: Speedster, Manufacturer: Giant\n",
+      "Has Carrier: True\n",
+      "Model: Model S, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "Model: Model 3, Manufacturer: Tesla\n",
+      "Number of Doors: 4\n",
+      "Model updated to New Model\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "using System.Linq;\n",
+    "\n",
+    "public delegate void DisplayDelegate();\n",
+    "\n",
+    "public class Transport\n",
+    "{\n",
+    "    public string Model { get; set; }\n",
+    "    public string Manufacturer { get; set; }\n",
+    "\n",
+    "    public Transport(string model, string manufacturer)\n",
+    "    {\n",
+    "        Model = model;\n",
+    "        Manufacturer = manufacturer;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Model: {Model}, Manufacturer: {Manufacturer}\");\n",
+    "    }\n",
+    "    public delegate void TransportHandler(string message);\n",
+    "    public event TransportHandler TransportUpdated;\n",
+    "\n",
+    "    public void UpdateModel(string newModel)\n",
+    "    {\n",
+    "        Model = newModel;\n",
+    "        // Вызываем событие после обновления модели\n",
+    "        TransportUpdated?.Invoke($\"Model updated to {newModel}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Transport\n",
+    "{\n",
+    "    public int NumberOfDoors { get; set; }\n",
+    "\n",
+    "    public Car(string model, string manufacturer, int numberOfDoors)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        NumberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Number of Doors: {NumberOfDoors}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bike : Transport\n",
+    "{\n",
+    "    public bool HasCarrier { get; set; }\n",
+    "\n",
+    "    public Bike(string model, string manufacturer, bool hasCarrier)\n",
+    "        : base(model, manufacturer)\n",
+    "    {\n",
+    "        HasCarrier = hasCarrier;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Has Carrier: {HasCarrier}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Car car = new Car(\"Model S\", \"Tesla\", 4);\n",
+    "Bike bike = new Bike(\"Speedster\", \"Giant\", true);\n",
+    "\n",
+    "// Присваиваем делегату метод DisplayInfo\n",
+    "DisplayDelegate displayCar = car.DisplayInfo;\n",
+    "DisplayDelegate displayBike = bike.DisplayInfo;\n",
+    "\n",
+    "// Вызов методов через делегаты\n",
+    "displayCar();\n",
+    "displayBike();\n",
+    "\n",
+    "List<Transport> transports = new List<Transport>\n",
+    "{\n",
+    "    new Car(\"Model S\", \"Tesla\", 4),\n",
+    "    new Bike(\"Speedster\", \"Giant\", true),\n",
+    "    new Car(\"Model 3\", \"Tesla\", 4),\n",
+    "};\n",
+    "\n",
+    "// Используем лямбда-выражение для фильтрации транспортных средств\n",
+    "var teslaCars = transports.OfType<Car>().Where(c => c.Manufacturer == \"Tesla\");\n",
+    "\n",
+    "foreach (var car in teslaCars)\n",
+    "{\n",
+    "    car.DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "Transport transport = new Transport(\"Old Model\", \"Generic\");\n",
+    "transport.TransportUpdated += OnTransportUpdated;\n",
+    "transport.UpdateModel(\"New Model\");\n",
+    "\n",
+    "\n",
+    "static void OnTransportUpdated(string message)\n",
+    "{\n",
+    "    Console.WriteLine(message);\n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -206,9 +331,129 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Порода: Овчарка, Тип животного: Собака\n",
+      "Издает звук: True\n",
+      "Порода: Сибирская, Тип животного: Кошка\n",
+      "Количество лап: 4\n",
+      "Порода: Хаски, Тип животного: Собака\n",
+      "Издает звук: True\n",
+      "Breed updated to Такса\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "using System.Linq;\n",
+    "\n",
+    "public delegate void DisplayDelegate();\n",
+    "\n",
+    "public class Animal\n",
+    "{\n",
+    "    public string Breed {get; set;}\n",
+    "    public string TypeOfAnimal {get; set;}\n",
+    "\n",
+    "    public Animal(string breed, string typeOfAnimal)\n",
+    "    {\n",
+    "        Breed = breed;\n",
+    "        TypeOfAnimal = typeOfAnimal;\n",
+    "    }\n",
+    "\n",
+    "    public virtual void DisplayInfo()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Порода: {Breed}, Тип животного: {TypeOfAnimal}\");\n",
+    "    }\n",
+    "\n",
+    "    public delegate void AnimalHandler(string message);\n",
+    "    public event AnimalHandler AnimalUpdated;\n",
+    "\n",
+    "    public void UpdateBreed(string newBreed) \n",
+    "    {\n",
+    "        Breed = newBreed;\n",
+    "        AnimalUpdated?.Invoke($\"Breed updated to {newBreed}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public bool MakeSound {get; set;}\n",
+    "\n",
+    "    public Dog(string breed, string typeOfAnimal, bool makeSound)\n",
+    "        : base(breed, typeOfAnimal)\n",
+    "    {\n",
+    "        MakeSound = makeSound;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Издает звук: {MakeSound}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public int Paws {get; set;}\n",
+    "\n",
+    "    public Cat(string breed, string typeOfAnimal, int paws)\n",
+    "        : base(breed, typeOfAnimal)\n",
+    "    {\n",
+    "        Paws = paws;\n",
+    "    }\n",
+    "\n",
+    "    public override void DisplayInfo()\n",
+    "    {\n",
+    "        base.DisplayInfo();\n",
+    "        Console.WriteLine($\"Количество лап: {Paws}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Dog dog = new Dog(\"Овчарка\", \"Собака\", true);\n",
+    "Cat cat = new Cat(\"Сибирская\", \"Кошка\", 4);\n",
+    "\n",
+    "DisplayDelegate displayDog = dog.DisplayInfo;\n",
+    "DisplayDelegate displayCat = cat.DisplayInfo;\n",
+    "\n",
+    "displayDog();\n",
+    "displayCat();\n",
+    "\n",
+    "List<Animal> animals = new List<Animal>\n",
+    "{\n",
+    "    new Dog(\"Овчарка\", \"Собака\", true),\n",
+    "    new Dog(\"Хаски\", \"Собака\", true),\n",
+    "    new Cat(\"Сибирская\", \"Кошка\", 4),\n",
+    "};\n",
+    "\n",
+    "var dogs = animals.OfType<Dog>().Where(dog => dog.Breed == \"Хаски\");\n",
+    "\n",
+    "foreach (var dog in dogs)\n",
+    "{\n",
+    "    dog.DisplayInfo();\n",
+    "}\n",
+    "\n",
+    "Animal animal = new Animal(\"Собака\", \"Собака\");\n",
+    "animal.AnimalUpdated += OnAnimalUpdated;\n",
+    "animal.UpdateBreed(\"Такса\");\n",
+    "\n",
+    "\n",
+    "static void OnAnimalUpdated(string message)\n",
+    "{\n",
+    "    Console.WriteLine(message);\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
